--- a/templates/index.html
+++ b/templates/index.html
@@ -1,383 +1,15 @@
-<!DOCTYPE HTML>
-<!--
-	Epilogue by TEMPLATED
-	templated.co @templatedco
-	Released for free under the Creative Commons Attribution 3.0 license (templated.co/license)
--->
-<html>
-<!-- <style>
-.dropbtn {
-	background-color: white;
-	color: white;
-	padding: 16px;
-	font-size: 16px;
-	border: none;
-	cursor: pointer;
-}
-
-.dropdown-left {
-	position: absolute;
-	display: inline-block;
-	height: 50px;
-	width: 250px;
-	left: 100px;
-top: 800px;
-
-}
-
-.dropdown-right {
-	position: absolute;
-	display: inline-block;
-	height: 50px;
-	width: 250px;
-	left: 300px;
-		top: 800px;
-}
-
-.dropdown-one {
-	position: absolute;
-	display: inline-block;
-	height: 50px;
-	width: 250px;
-	left: 500px;
-	top: 800px;
-
-}
-
-.dropdown-two {
-	position: absolute;
-	display: inline-block;
-	height: 50px;
-	width: 250px;
-	left: 700px;
-		top: 800px;
-}
-
-.dropdown-three {
-	position: absolute;
-	display: inline-block;
-	height: 50px;
-	width: 250px;
-	left: 850px;
-	top: 800px;
-
-}
-
-.dropdown-four {
-	position: absolute;
-	display: inline-block;
-	height: 50px;
-	width: 250px;
-	left: 950px;
-	top: 800px;
-}
-
-.dropdown-c {
-	position: absolute;
-	display: inline-block;
-	height: 50px;
-	width: 250px;
-	left: 100px;
-	top: 1000px;
-
-}
-
-.dropdown-d {
-	position: absolute;
-	display: inline-block;
-	height: 50px;
-	width: 250px;
-	left: 300px;
-	top: 1000px;
-}
-
-.dropdown-e {
-	position: absolute;
-	display: inline-block;
-	height: 50px;
-	width: 250px;
-	left: 500px;
-	top: 1000px;
-
-}
-
-.dropdown-f {
-	position: absolute;
-	display: inline-block;
-	height: 50px;
-	width: 250px;
-	left: 100px;
-	top: 1200px;
-}
-
-.dropdown-g {
-	position: absolute;
-	display: inline-block;
-	height: 50px;
-	width: 250px;
-	left: 300px;
-	top: 1200px;
-}
-
- .dropdown-h {
-	position: absolute;
-	display: inline-block;
-	height: 50px;
-	width: 250px;
-	left: 100px;
-	top: 1400px;
-}
-
-
-.dropdown-content {
-	display: none;
-	position: absolute;
-	right: 0;
-	background-color: #f9f9f9;
-	min-width: 160px;
-	box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
-	z-index: 1;
-}
-
-.dropdown-content a {
-	color: black;
-	padding: 12px 16px;
-	text-decoration: none;
-	display: block;
-}
-
-.container {
-			text-align: center;
-
-}
-.dropdown-content a:hover {background-color: #f1f1f1;}
-</style> -->
-
-	<head>
-		<title>Epilogue by TEMPLATED</title>
-		<meta charset="utf-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <!-- <link rel="stylesheet" href="C:\Users\wajid\Downloads\Fantasy-Basketball\static\css"/> -->
-		<link rel="stylesheet" type = "text/css" href="{{url_for('static',filename='static/css/main.css')}}" />
-	</head>
-	<body>
-
-		<!-- Header -->
-			<header id="header" class="alt">
-				<div class="inner">
-					<h1>NBA SCOUTING</h1>
-					<p> Search for International Talent </p>
-				</div>
-			</header>
-
-		<!-- Wrapper -->
-			<div id="wrapper">
-
-
-				<!-- Banner -->
-					<section id="intro" class="main">
-
-						<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed vitae<br />
-						malesuada turpis. Nam pellentesque in ac aliquam. Aliquam tempor<br />
-						mi porta egestas maximus lorem ipsum dolor.mi porta egestas maximus lorem ipsum dolor.mi porta egestas maximus lorem ipsum dolor.mi porta egestas maximus lorem ipsum dolor.mi porta egestas maximus lorem ipsum dolor.mi porta egestas maximus lorem ipsum dolor.mi porta egestas maximus lorem ipsum dolor.mi porta egestas maximus lorem ipsum dolor.mi porta egestas maximus lorem ipsum dolor.mi porta egestas maximus lorem ipsum dolor.mi porta egestas maximus lorem ipsum dolor.mi porta egestas maximus lorem ipsum dolor.mi porta egestas maximus lorem ipsum dolor.mi porta egestas maximus lorem ipsum dolor.mi porta egestas maximus lorem ipsum dolor.mi porta egestas maximus lorem ipsum dolor.mi porta egestas maximus lorem ipsum dolor.mi porta egestas maximus lorem ipsum dolor.mi porta egestas maximus lorem ipsum dolor.mi porta egestas maximus lorem ipsum dolor.mi porta egestas maximus lorem ipsum dolor.mi porta egestas maximus lorem ipsum dolor.mi porta egestas maximus lorem ipsum dolor.mi porta egestas maximus lorem ipsum dolor.mi porta egestas maximus lorem ipsum dolor.mi porta egestas maximus lorem ipsum dolor.mi porta egestas maximus lorem .
-                            porta egestas maximus lorem ipsum dolor.mi porta egestas maximus lorem ipsum dolor.mi porta egestas maximus lorem ipsum dolor.mi porta egestas maximus lorem ipsum dolor.mi porta egestas maximus lorem ipsum dolor.mi porta egestas maximus lorem ipsum dolor.mi porta egestas maximus lorem ipsum dolor.mi porta egestas maximus lorem ipsum dolor.mi porta egestas maximus lorem ipsum dolor.mi porta egestas maximus lorem ipsum dolor.mi porta egestas maximus lorem .porta egestas maximus lorem ipsum dolor.mi porta egestas maximus lorem ipsum dolor.mi porta egestas maximus lorem ipsum dolor.mi porta egestas maximus lorem ipsum dolor.mi porta egestas maximus lorem ipsum dolor.mi porta egestas maximus lorem ipsum dolor.mi porta egestas maximus lorem ipsum dolor.mi porta egestas maximus lorem ipsum dolor.mi porta egestas maximus lorem ipsum dolor.mi porta egestas maximus lorem ipsum dolor.mi porta egestas maximus lorem .
-                            porta egestas maximus lorem ipsum dolor.mi porta egestas maximus lorem ipsum dolor.mi porta egestas maximus lorem ipsum dolor.mi porta egestas maximus lorem ipsum dolor.mi porta egestas maximus lorem ipsum dolor.mi porta egestas maximus lorem ipsum dolor.mi porta egestas maximus lorem ipsum dolor.mi porta egestas maximus lorem ipsum dolor.mi porta egestas maximus lorem ipsum dolor.mi porta egestas maximus lorem ipsum dolor.mi porta egestas maximus lorem
-                            .
-                            porta egestas maximus lorem ipsum dolor.mi porta egestas maximus lorem ipsum dolor.mi porta egestas maximus lorem ipsum dolor.mi porta egestas maximus lorem ipsum dolor.mi porta egestas maximus lorem ipsum dolor.mi porta egestas maximus lorem ipsum dolor.mi porta egestas maximus lorem ipsum dolor.mi porta egestas maximus lorem ipsum dolor.mi porta egestas maximus lorem ipsum dolor.mi porta egestas maximus lorem ipsum dolor.mi porta egestas maximus lorem .
-                            porta egestas maximus lorem ipsum dolor.mi porta egestas maximus lorem ipsum dolor.mi porta egestas maximus lorem ipsum dolor.mi porta egestas maximus lorem ipsum dolor.mi porta egestas maximus lorem ipsum dolor.mi porta egestas maximus lorem ipsum dolor.mi porta egestas maximus lorem ipsum dolor.mi porta egestas maximus lorem ipsum dolor.mi porta egestas maximus lorem ipsum dolor.mi porta egestas maximus lorem ipsum dolor.mi porta egestas maximus lorem .
-                            porta egestas maximus lorem ipsum dolor.mi porta egestas maximus lorem ipsum dolor.mi porta egestas maximus lorem ipsum dolor.mi porta egestas maximus lorem ipsum dolor.mi porta egestas maximus lorem ipsum dolor.mi porta egestas maximus lorem ipsum dolor.mi porta egestas maximus lorem ipsum dolor.mi porta egestas maximus lorem ipsum dolor.mi porta egestas maximus lorem ipsum dolor.mi porta egestas maximus lorem ipsum dolor.mi porta egestas maximus lorem .
-                            porta egestas maximus lorem ipsum dolor.mi porta egestas maximus lorem ipsum dolor.mi porta egestas maximus lorem ipsum dolor.mi porta egestas maximus lorem ipsum dolor.mi porta egestas maximus lorem ipsum dolor.mi porta egestas maximus lorem ipsum dolor.mi porta egestas maximus lorem ipsum dolor.mi porta egestas maximus lorem ipsum dolor.mi porta egestas maximus lorem ipsum dolor.mi porta egestas maximus lorem ipsum dolor.mi porta egestas maximus lorem .
-                            porta egestas maximus lorem ipsum dolor.mi porta egestas maximus lorem ipsum dolor.mi porta egestas maximus lorem ipsum dolor.mi porta egestas maximus lorem ipsum dolor.mi porta egestas maximus lorem ipsum dolor.mi porta egestas maximus lorem ipsum dolor.mi porta egestas maximus lorem ipsum dolor.mi porta egestas maximus lorem ipsum dolor.mi porta egestas maximus lorem ipsum dolor.mi porta egestas maximus lorem ipsum dolor.mi porta egestas maximus lorem .
-                        </p>
-
-
-                            <div class="dropdown-left" >
-                              <button onclick="myFunction()" class="dropbtn">PID</button>
-                                <script>
-                                function myFunction() {
-                                  var create_pid = prompt("Please Enter the Value:");
-                                }
-                                </script>
-                            </div>
-
-                            <div class="dropdown-right">
-                              <button onclick="myFunction()" class="dropbtn">Name</button>
-                                 <script>
-                                function myFunction() {
-                                  var create_name = prompt("Please Enter the Value:");
-                                }
-                                </script>
-                            </div>
-
-                        <div class="dropdown-one">
-                              <button onclick="myFunction()" class="dropbtn">Team</button>
-                                <script>
-                                function myFunction() {
-                                  var create_team = prompt("Please Enter the Value:");
-                                }
-                                </script>
-                            </div>
-
-                            <div class="dropdown-two">
-                              <button onclick="myFunction()" class="dropbtn">Position</button>
-                                <script>
-                                function myFunction() {
-                                  var create_pos = prompt("Please Enter the Value:");
-                                }
-                                </script>
-                            </div>
-
-                           <div class="dropdown-three">
-                              <button onclick="myFunction()" class="dropbtn">Ht</button>
-                                <script>
-                                function myFunction() {
-                                  var create_ht = prompt("Please Enter the Value:");
-                                }
-                                </script>
-                            </div>
-
-                            <div class="dropdown-four">
-                              <button onclick="myFunction()" class="dropbtn">Wt</button>
-                                <script>
-                                function myFunction() {
-                                  var create_wt = prompt("Please Enter the Value:");
-                                }
-                                </script>
-                            </div>
-
-                             <div class="dropdown-c">
-                              <button onclick="myFunction()" class="dropbtn">Player</button>
-                                <script>
-                                function myFunction() {
-                                  var update_player = prompt("Please Enter the Value:");
-                                }
-                                </script>
-                            </div>
-
-                            <div class="dropdown-d">
-                              <button onclick="myFunction()" class="dropbtn">Teams</button>
-                                <script>
-                                function myFunction() {
-                                  var update_team = prompt("Please Enter the Value:");
-                                }
-                                </script>
-                            </div>
-
-                             <div class="dropdown-e">
-                              <button onclick="myFunction()" class="dropbtn">Weight</button>
-                                <script>
-                                function myFunction() {
-                                  var update_wt = prompt("Please Enter the Value:");
-                                }
-                                </script>
-                            </div>
-
-
-                         <div class="dropdown-f">
-                              <button onclick="myFunction()" class="dropbtn">Teams</button>
-                                <script>
-                                function myFunction() {
-                                  var delete_teams = prompt("Please Enter the Value:");
-                                }
-                                </script>
-                            </div>
-
-                             <div class="dropdown-g">
-                              <button onclick="myFunction()" class="dropbtn">Player</button>
-                                <script>
-                                function myFunction() {
-                                  var delete_players = prompt("Please Enter the Value:");
-                                }
-                                </script>
-                            </div>
-
-                          <div class="dropdown-h">
-                              <button onclick="myFunction()" class="dropbtn">Teams</button>
-                                <script>
-                                function myFunction() {
-                                  var read_teams = prompt("Please Enter the Value:");
-                                }
-                                </script>
-                          </div>
-
-
-					</section>
-
-				<!-- Items -->
-					<section class="main items">
-						<article class="item">
-							<header>
-								<a href="#"><img src="{{ url_for('static', filename = 'images/pic01.jpg')}}" alt="" /></a>
-								<h3>LAKERS</h3>
-							</header>
-							<p>Fusce malesuada efficitur venenatis. Pellentesque tempor leo sed massa hendrerit hendrerit. In sed feugiat est, eu congue elit. Ut porta magna vel felis sodales vulputate. Donec faucibus dapibus lacus non ornare.</p>
-							<ul class="actions">
-								<li><a href="#" class="button">More</a></li>
-							</ul>
-						</article>
-						<article class="item">
-							<header>
-								<a href="#"><img src="images/pic02.jpg" alt="" /></a>
-								<h3>WARRIORS</h3>
-							</header>
-							<p>Fusce malesuada efficitur venenatis. Pellentesque tempor leo sed massa hendrerit hendrerit. In sed feugiat est, eu congue elit. Ut porta magna vel felis sodales vulputate. Donec faucibus dapibus lacus non ornare.</p>
-							<ul class="actions">
-								<li><a href="#" class="button">More</a></li>
-							</ul>
-						</article>
-						<article class="item">
-							<header>
-								<a href="#"><img src="images/pic03.jpg" alt="" /></a>
-								<h3>BULLS</h3>
-							</header>
-							<p>Fusce malesuada efficitur venenatis. Pellentesque tempor leo sed massa hendrerit hendrerit. In sed feugiat est, eu congue elit. Ut porta magna vel felis sodales vulputate. Donec faucibus dapibus lacus non ornare.</p>
-							<ul class="actions">
-								<li><a href="#" class="button">More</a></li>
-							</ul>
-						</article>
-						<article class="item">
-							<header>
-								<a href="#"><img src="images/pic04.jpg" alt="" /></a>
-								<h3>CLIPPERS</h3>
-							</header>
-							<p>Fusce malesuada efficitur venenatis. Pellentesque tempor leo sed massa hendrerit hendrerit. In sed feugiat est, eu congue elit. Ut porta magna vel felis sodales vulputate. Donec faucibus dapibus lacus non ornare.</p>
-							<ul class="actions">
-								<li><a href="#" class="button">More</a></li>
-							</ul>
-						</article>
-					</section>
-
-
-
-				<!-- Main -->
-				<!--
-					<section id="main" class="main">
-						<header>
-							<h2>Lorem ipsum dolor</h2>
-						</header>
-						<p>Fusce malesuada efficitur venenatis. Pellentesque tempor leo sed massa hendrerit hendrerit. In sed feugiat est, eu congue elit. Ut porta magna vel felis sodales vulputate. Donec faucibus dapibus lacus non ornare. Etiam eget neque id metus gravida tristique ac quis erat. Aenean quis aliquet sem. Ut ut elementum sem. Suspendisse eleifend ut est non dapibus. Nulla porta, neque quis pretium sagittis, tortor lacus elementum metus, in imperdiet ante lorem vitae ipsum. Pellentesque habitant morbi tristique senectus et netus et malesuada fames ac turpis egestas. Etiam eget neque id metus gravida tristique ac quis erat. Aenean quis aliquet sem. Ut ut elementum sem. Suspendisse eleifend ut est non dapibus. Nulla porta, neque quis pretium sagittis, tortor lacus elementum metus, in imperdiet ante lorem vitae ipsum. Pellentesque habitant morbi tristique senectus et netus et malesuada fames ac turpis egestas.</p>
-					</section>
-				-->
-
-				<!-- Footer -->
-					<footer id="footer">
-						<ul class="icons">
-							<li><a href="#" class="icon fa-twitter"><span class="label">Twitter</span></a></li>
-							<li><a href="#" class="icon fa-facebook"><span class="label">Facebook</span></a></li>
-							<li><a href="#" class="icon fa-instagram"><span class="label">Instagram</span></a></li>
-							<li><a href="#" class="icon fa-linkedin"><span class="label">LinkedIn</span></a></li>
-							<li><a href="#" class="icon fa-envelope"><span class="label">Email</span></a></li>
-						</ul>
-						<p class="copyright">&copy; Untitled. Design: <a href="https://templated.co">TEMPLATED</a>. Images: <a href="https://unsplash.com">Unsplash</a>.</p>
-					</footer>
-
-			</div>
-
-		<!-- Scripts -->
-			<script src="assets/js/jquery.min.js"></script>
-			<script src="assets/js/skel.min.js"></script>
-			<script src="assets/js/util.js"></script>
-			<script src="assets/js/main.js"></script>
-
-	</body>
-</html>
+<HTML>
+  <BODY bgcolor="cyan">
+  <form method="POST" action="">
+      <center>
+        <H1>Enter your table </H1> <br>
+         <input type = "text" name= "table" /> <br>
+       Query: <input type = "submit">
+      <H1>Enter your query </H1> <br>
+       <input type = "text" name= "statement" /> <br>
+      <input type = "submit">
+          <p1>{{ output }}!</p1>
+      </center>
+</form>
+</BODY>
+</HTML>
