--- a/templates/results.html
+++ b/templates/results.html
@@ -11,7 +11,10 @@
         </center>
   </form>
   <form action="/action_page.php">
-    <textarea name="message" rows="900" cols="250">{{ output }}</textarea>
+    <textarea name="message" rows="225" cols="80">{{ output_one }}</textarea>
+    <textarea name="message" rows="225" cols="80">{{ output_two }}</textarea>
+    <textarea name="message" rows="225" cols="80">{{ output_three }}</textarea>
+    <textarea name="message" rows="225" cols="80">{{ output_four }}</textarea>
     <br><br>
   </form>
   </BODY>
