--- a/templates/results.html
+++ b/templates/results.html
@@ -1,10 +1,7 @@
 <HTML>
-    <BODY bgcolor="cyan">
+    <BODY bgcolor="green">
     <form method="POST" action="">
         <center>
-          <H1>Enter your table </H1> <br>
-         <input type = "text" name= "table" /> <br>
-        <input type = "submit">
         <H1>Enter your query </H1> <br>
         Query <input type = "text" name= "statement" /> <br>
         <input type = "submit">
