--- a/templates/index.html
+++ b/templates/index.html
@@ -1,3 +1,5 @@
+{% extends "base.html" %}
+{% block content %}
 <HTML>
   <BODY bgcolor="cyan">
   <form method="POST" value="">
@@ -15,8 +17,9 @@
       <H1>Enter your query </H1> <br>
        <input type = "text" name= "statement" /> <br>
       <input type = "submit">
-          <p1>{{ output }}!</p1>
+          <p1>{{ output }}</p1>
       </center>
 	</form>
 	</BODY>
 </HTML>
+{% endblock content %}
