--- a/templates/results.html
+++ b/templates/results.html
@@ -1,18 +1,72 @@
+{% extends "base.html" %}
+{% block content %}
+
 <HTML>
-    <BODY bgcolor="cyan">
-    <form method="POST" action="">
-        <center>
-          <H1>Enter your table </H1> <br>
-         <input type = "text" name= "table" /> <br>
-        <input type = "submit">
-        <H1>Enter your query </H1> <br>
-        Query <input type = "text" name= "statement" /> <br>
-        <input type = "submit">
-        </center>
-  </form>
-  <form action="/action_page.php">
-    <textarea name="message" rows="900" cols="250">{{ output }}</textarea>
-    <br><br>
-  </form>
-  </BODY>
-  </HTML>
+  {% if table == "Players" %}
+    <table class="table table-striped table-dark">
+      <thead>
+        <tr>
+          <th scope="col">Player ID</th>
+          <th scope="col">Player Name</th>
+          <th scope="col">Team</th>
+          <th scope="col">Position</th>
+          <th scope="col">Height</th>
+          <th scope="col">Weight</th>
+        </tr>
+      </thead>
+      <tbody>
+        {% for row in output %}
+          <tr>
+            <td>{{ row[0] }}</td>
+            <td>{{ row[1] }}</td>
+            <td>{{ row[2] }}</td>
+            <td>{{ row[3] }}</td>
+            <td>{{ row[4] }}</td>
+            <td>{{ row[5] }}</td>
+          </tr>
+        {% endfor %}
+      </tbody>
+    </table>
+  {% elif table == "Leagues" %}
+    <table class="table table-striped table-dark">
+      <thead>
+        <tr>
+          <th scope="col">League Name</th>
+          <th scope="col">Number of Games</th>
+        </tr>
+      </thead>
+      <tbody>
+        {% for row in output %}
+          <tr>
+            <td>{{ row[0] }}</td>
+            <td>{{ row[1] }}</td>
+          </tr>
+        {% endfor %}
+      </tbody>
+    </table>
+  {% elif table == "Teams" %}
+    <table class="table table-striped table-dark">
+      <thead>
+        <tr>
+          <th scope="col">Team Name</th>
+          <th scope="col">W</th>
+          <th scope="col">L</th>
+          <th scope="col">Games</th>
+        </tr>
+      </thead>
+      <tbody>
+        {% for row in output %}
+          <tr>
+            <td>{{ row[0] }}</td>
+            <td>{{ row[1] }}</td>
+            <td>{{ row[2] }}</td>
+            <td>{{ row[3] }}</td>
+          </tr>
+        {% endfor %}
+      </tbody>
+    </table>
+  {% else %}
+    <h1>U messed up</h1>
+  {% endif %}
+</HTML>
+{% endblock content %}
