Finish login/logout and basic html formatting

--- a/templates/about.html
+++ b/templates/about.html
@@ -1,4 +1,5 @@
 {% extends "base.html" %}
 {% block content %}
-    <h1>About Page</h1>
+    <h1>We are the NBA Player Finder</h1>
+    <p>An application that allows NBA scouts to find prospective NCAA and G-League players for their respective teams.</p>
 {% endblock content %}
