--- a/templates/signup.html
+++ b/templates/signup.html
@@ -1,3 +1,4 @@
+<!-- Base code taken from bootstrap flask forms -->
 {% extends "base.html" %}
 {% block content %}
     <div class="content-section">
