--- a/templates/index.html
+++ b/templates/index.html
@@ -5,7 +5,7 @@
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.0/css/bootstrap.min.css">
-  <link rel="stylesheet" type="text/css" href="static\main.css">
+  <link rel="stylesheet" type="text/css" href="../static/css/main.css">
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.16.0/umd/popper.min.js"></script>
   <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.0/js/bootstrap.min.js"></script>
@@ -125,7 +125,7 @@
         <td>3</td>
         <td>4</td>
         <td>
-            <button class="btn btn-outline-primary">Add Player</button>
+            <button id ="but_one" type ="button" onclick="add_elements_one()" class="btn btn-outline-primary">Add Player</button>
         </td>
       </tr>
       <tr>
@@ -344,7 +344,7 @@
 
 
 <!-- Javascript -->
-<script src="static/main.js"></script>
+<script src="../static/main.js"></script>
 
 
 </body>
