--- a/templates/home.html
+++ b/templates/home.html
@@ -1,4 +1,261 @@
 {% extends "base.html" %}
 {% block content %}
-  <h1> Sup </h1>
+<!-- Search bar implementation-->
+<div class="search">
+  <input id="search-bar" name="search" type="text" placeholder="Search for any player">
+  <form method="POST" action="">
+  <input id="search-button" name="search_submit" type="submit" value="Search">
+  </form>
+</div>
+
+<!-- Table implementation -->
+<div class="row">
+  <div class="column">
+<div class ="table_one">
+  <table id = "add_table" border = "3" class="table table-striped table-dark">
+    <thead>
+      <tr>
+        <TH COLSPAN="7">
+          <h3><BR><center>Player Reccomendations</center></H3>
+       </TH>
+      </tr>
+      <tr>
+        <th scope="col">PlayerID</th>
+        <th scope="col">PlayerID</th>
+        <th scope="col">PlayerName</th>
+        <th scope="col">Points</th>
+        <th scope="col">Assists</th>
+        <th scope="col">Rebounds</th>
+        <th scope="col">ACTIONS</th>
+      </tr>
+    </thead>
+    <tbody>
+      <tr>
+        <th scope="row"></th>
+        <td>1</td>
+        <td>Mark</td>
+        <td>2</td>
+        <td>3</td>
+        <td>4</td>
+        <td>
+            <button class="btn btn-outline-primary">Add Player</button>
+        </td>
+      </tr>
+      <tr>
+        <th scope="row"></th>
+        <td>2</td>
+        <td>Jacob</td>
+        <td>10</td>
+        <td>10</td>
+        <td>10</td>
+        <td>
+        <button class="btn btn-outline-primary">Add Player</button>
+      </td>
+      </tr>
+      <tr>
+        <th scope="row"></th>
+        <td>3</td>
+        <td>Larry</td>
+        <td>10</td>
+        <td>10</td>
+        <td>10</td>
+        <td>
+        <button class="btn btn-outline-primary">Add Player</button>
+      </td>
+      </tr>
+    </tbody>
+  </table>
+</div>
+</div>
+<div class="column">
+  <div class ="table_two">
+    <table id = "del_table" border = "3" class="table table-striped table-dark">
+      <thead>
+        <tr>
+          <TH COLSPAN="6">
+            <H3><BR><center>Team Roster</center></H3>
+         </TH>
+        </tr>
+        <tr>
+          <th scope="col">PlayerID</th>
+          <th scope="col">PlayerName</th>
+          <th scope="col">Points</th>
+         <th scope="col">Assists</th>
+         <th scope="col">Rebounds</th>
+          <th scope="col">ACTIONS</th>
+        </tr>
+      </thead>
+      <tbody>
+        <tr>
+          <th scope="row">1</th>
+          <td>Mark</td>
+          <td>10</td>
+        <td>10</td>
+        <td>10</td>
+          <td>
+              <button class="btn btn-outline-danger">Delete Player</button>
+          </td>
+        </tr>
+        <tr>
+          <th scope="row">2</th>
+          <td>Jacob</td>
+          <td>10</td>
+        <td>10</td>
+        <td>10</td>
+          <td>
+          <button class="btn btn-outline-danger">Delete Player</button>
+        </td>
+        </tr>
+        <tr>
+          <th scope="row">3</th>
+          <td>Larry</td>
+          <td>10</td>
+        <td>10</td>
+        <td>10</td>
+          <td>
+          <button class="btn btn-outline-danger">Delete Player</button>
+        </td>
+        </tr>
+        <tr>
+          <th scope="row">4</th>
+          <td>Larry</td>
+          <td>10</td>
+        <td>10</td>
+        <td>10</td>
+          <td>
+            <button class="btn btn-outline-danger">Delete Player</button>
+        </td>
+        </tr>
+        <tr>
+          <th scope="row">5</th>
+          <td>Larry</td>
+          <td>10</td>
+        <td>10</td>
+        <td>10</td>
+          <td>
+            <button class="btn btn-outline-danger">Delete Player</button>
+        </td>
+        </tr>
+        <tr>
+          <th scope="row">6</th>
+          <td>Larry</td>
+          <td>10</td>
+        <td>10</td>
+        <td>10</td>
+          <td>
+            <button class="btn btn-outline-danger">Delete Player</button>
+        </td>
+        </tr>
+        <tr>
+          <th scope="row">7</th>
+          <td>Larry</td>
+          <td>10</td>
+        <td>10</td>
+        <td>10</td>
+          <td>
+            <button class="btn btn-outline-danger">Delete Player</button>
+        </td>
+        </tr>
+        <tr>
+          <th scope="row">8</th>
+          <td>Larry</td>
+          <td>10</td>
+        <td>10</td>
+        <td>10</td>
+          <td>
+            <button class="btn btn-outline-danger">Delete Player</button>
+        </td>
+        </tr>
+        <tr>
+          <th scope="row">9</th>
+          <td>Larry</td>
+          <td>10</td>
+        <td>10</td>
+        <td>10</td>
+          <td>
+            <button class="btn btn-outline-danger">Delete Player</button>
+        </td>
+        </tr>
+        <tr>
+          <th scope="row">10</th>
+          <td>Larry</td>
+          <td>10</td>
+        <td>10</td>
+        <td>10</td>
+          <td>
+            <button class="btn btn-outline-danger">Delete Player</button>
+        </td>
+        </tr>
+        <tr>
+          <th scope="row">11</th>
+          <td>Larry</td>
+          <td>10</td>
+        <td>10</td>
+        <td>10</td>
+          <td>
+            <button class="btn btn-outline-danger">Delete Player</button>
+        </td>
+        </tr>
+        <tr>
+          <th scope="row">12</th>
+          <td>Larry</td>
+          <td>10</td>
+        <td>10</td>
+        <td>10</td>
+          <td>
+            <button class="btn btn-outline-danger">Delete Player</button>
+        </td>
+        </tr>
+        <tr>
+          <th scope="row">13</th>
+            <td>Larry</td>
+            <td>10</td>
+            <td>10</td>
+            <td>10</td>
+          <td>
+            <button class="btn btn-outline-danger">Delete Player</button>
+          </td>
+        </tr>
+      </tbody>
+    </table>
+  </div>
+</div>
+  <div class="column">
+    <div class ="table_three">
+      <table id=stats_table border="3" class="table table-striped table-dark">
+        <thead>
+          <tr>
+            <TH COLSPAN="3">
+              <h3><BR><center>Team Statistics</center></H3>
+           </TH>
+          </tr>
+          <tr>
+            <th scope="col">Statistic Name</th>
+            <th scope="col">AVG</th>
+          </tr>
+        </thead>
+        <tbody>
+          <tr>
+            <th scope="row">Points</th>
+            <td>1</td>
+          </tr>
+          <tr>
+            <th scope="row">Assists</th>
+            <td>2</td>
+
+          </tr>
+          <tr>
+            <th scope="row">Rebounds</th>
+            <td>3</td>
+
+          </tr>
+        </tbody>
+      </table>
+    </div>
+  </div>
+</div>
+
+
+<!-- Javascript -->
+<script src="static/main.js"></script>
 {% endblock content %}
