--- a/templates/index.html
+++ b/templates/index.html
@@ -5,7 +5,7 @@
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.0/css/bootstrap.min.css">
-  <link rel="stylesheet" type="text/css" href="static\main.css">
+  <link rel="stylesheet" type="text/css" href="../static/css/main.css">
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.16.0/umd/popper.min.js"></script>
   <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.0/js/bootstrap.min.js"></script>
@@ -36,34 +36,7 @@
         <h2>NBA DRAFT SELECTOR</h2>
       </div>
     </div>
-
-      <!-- Code for login -->
-      <ul class="nav navbar-nav flex-row justify-content-between ml-auto">
-        <li class="nav-item order-2 order-md-1"><a href="#" class="nav-link" title="settings"><i class="fa fa-cog fa-fw fa-lg"></i></a></li>
-        <li class="dropdown order-1">
-            <button type="button" id="dropdownMenu1" data-toggle="dropdown" class="btn btn-outline-secondary dropdown-toggle">Login <span class="caret"></span></button>
-            <ul class="dropdown-menu dropdown-menu-right mt-2">
-               <li class="px-3 py-2">
-                   <form class="form" role="form">
-                        <div class="form-group">
-                            <input id="emailInput" placeholder="Email" class="form-control form-control-sm" type="text" required="">
-                        </div>
-                        <div class="form-group">
-                            <input id="passwordInput" placeholder="Password" class="form-control form-control-sm" type="text" required="">
-                        </div>
-                        <div class="form-group">
-                            <button type="submit" class="btn btn-primary btn-block">Login</button>
-                        </div>
-                        <div class="form-group text-center">
-                            <small><a href="#" data-toggle="modal" data-target="#modalPassword">Forgot password?</a></small>
-                        </div>
-                    </form>
-                </li>
-            </ul>
-        </li>
-    </ul>
-</div>
-</div>
+  </div>
 </nav>
 
 <div id="modalPassword" class="modal fade" tabindex="-1" role="dialog" aria-labelledby="myModalLabel" aria-hidden="true">
@@ -329,12 +302,12 @@
           <tr>
             <th scope="row">Assists</th>
             <td>2</td>
-           
+
           </tr>
           <tr>
             <th scope="row">Rebounds</th>
             <td>3</td>
-          
+
           </tr>
         </tbody>
       </table>
